[gd_scene load_steps=2 format=3]

[ext_resource path="res://src/projectiles/visuals/weapons/minigun_special_bullet_visual.gd" type="Script" id=1]

[node name="MinigunSpecialBulletVisual" type="Node2D"]
script = ExtResource(1)

[node name="OutlinePolygon" type="Polygon2D" parent="."]
antialiased = true

[node name="BodyPolygon" type="Polygon2D" parent="."]
antialiased = true

[node name="TailCorePolygon" type="Polygon2D" parent="."]
antialiased = true

[node name="HighlightPolygon" type="Polygon2D" parent="."]
antialiased = true

[node name="GlowSprite" type="Sprite2D" parent="."]
centered = true

[node name="CrackleContainer" type="Node2D" parent="."]
